name:                fay-base
version:             0.14.3.0
synopsis:            The base package for Fay.
description:         The base package for Fay.
                     This package exports Prelude and FFI which you probably want to use with Fay.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          Adam Bergmark
homepage:            https://github.com/faylang/fay-base
bug-reports:         https://github.com/faylang/fay-base/issues
copyright:           2012 Chris Done
category:            Development
build-type:          Simple
cabal-version:       >=1.8
data-files:          src/Prelude.hs src/FFI.hs src/Data/Data.hs

source-repository head
  type: git
  location: https://github.com/faylang/fay.git

library
  hs-source-dirs:    src
  exposed:           False
  exposed-modules:   Prelude
                    ,FFI
                    ,Data.Data
  other-modules:     Language.Fay.FFI
                    ,Fay.Types
                    ,Paths_fay_base_m
                    ,Fay.Compiler.ModuleScope
  build-depends: base == 4.*
               , haskell-src-exts                                           
               , containers
               , data-default
               , mtl
               , filepath
               , data-default
               , haskell-src-exts
               , mtl

